--- a/about.html
+++ b/about.html
@@ -190,6 +190,7 @@
       .content p {
         font-size: 16px;
         line-height: 24px;
+        text-align: justify;
       }
       .philosophy {
         margin: 0;
