--- a/about.html
+++ b/about.html
@@ -273,7 +273,7 @@
           <ul id="menu">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="/index.html">Projects</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
