--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                         <li class="ss-carousel__item videoBlock overlyText">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/amyra/Amyra - Display Counter.mp4"
+                              src="/projects/amyra/Amyra-Display-Counter.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -630,7 +630,7 @@
                         <li class="ss-carousel__item videoBlock overlyText">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/amyra/Amyra - Cash Counter.mp4"
+                              src="/projects/amyra/Amyra-Cash-Counter.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
