products and projects

--- a/about.html
+++ b/about.html
@@ -240,7 +240,7 @@
           <div class="topNav" style="display: none">
             <span><a href="#">Architecture</a></span>
             <span><a href="#">Landscape</a></span>
-            <span><a href="#">Products</a></span>
+            <span><a href="/products.html">Products</a></span>
             <!-- <span>Nav1</span>
             <span>Nav1</span> -->
           </div>
