--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         font-weight: 700;
         font-style: normal;
       }
+      .mainWrapper {
+        padding-bottom: 50px;
+      }
       .projectsGrid {
         /* width: 50%; */
         margin: 0 auto;
@@ -340,7 +343,7 @@
   <body>
     <div id="preloader">
       <div class="preloader-content">
-        <img src="/images/logo.png" alt="Logo" class="preloader-logo" />
+        <img src="/images/favicon.png" alt="Logo" class="preloader-logo" />
         <div class="preloader-text">
           <span>A</span><span>r</span><span>c</span><span>h</span><span>i</span
           ><span>t</span><span>e</span><span>c</span><span>t</span
@@ -368,19 +371,21 @@
       }
 
       .preloader-logo {
-        width: 80px;
-        margin-bottom: 20px;
+        width: 100px;
+        margin-bottom: 0px;
       }
 
       .preloader-text {
         display: flex;
         gap: 0px; /* initially no gap */
         font-family: "Poppins", sans-serif;
-        font-weight: bold;
+        font-weight: normal;
+        color: #ed1c24;
+        text-transform: uppercase;
       }
 
       .preloader-text span {
-        font-size: 32px;
+        font-size: 14px;
         opacity: 1;
       }
     </style>
@@ -898,7 +903,7 @@
                     </div>
                     <div class="projectTitleInfo">
                       <h3 class="projectTitle">Ladia - Lab Grown Diamonds</h3>
-                      <p class="location">JUBILEE HILLS,PUNJAGUTTA</p>
+                      <p class="location">JUBILEE HILLS, PUNJAGUTTA</p>
                     </div>
                   </div>
                   <div class="heroSection">
@@ -930,7 +935,9 @@
                                 <h3 class="projectTitle">
                                   Ladia - Lab Grown Diamonds
                                 </h3>
-                                <p class="location">JUBILEE HILLS,PUNJAGUTTA</p>
+                                <p class="location">
+                                  JUBILEE HILLS, PUNJAGUTTA
+                                </p>
                                 <p class="location">2023</p>
                               </div>
                             </div>
@@ -985,6 +992,19 @@
                             alt=""
                           />
                         </li>
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              This lab-grown diamond boutique blends luxury with
+                              contemporary design, inspired by oceanic pearls
+                              and calming blues. A sculptural chandelier and
+                              curved display racks transform challenges into
+                              artistic features. Subtle brass accents and
+                              optimized circulation elevate the brand experience
+                              beautifully.
+                            </p>
+                          </div>
+                        </li>
 
                         <li class="ss-carousel__item slideBlock">
                           <div class="swiper mySwiper">
@@ -1036,17 +1056,8 @@
                             alt=""
                           />
                         </li> -->
-                        <li class="ss-carousel__item textBlock">
+                        <!-- <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
-                            <p>
-                              This lab-grown diamond boutique blends luxury with
-                              contemporary design, inspired by oceanic pearls
-                              and calming blues. A sculptural chandelier and
-                              curved display racks transform challenges into
-                              artistic features. Subtle brass accents and
-                              optimized circulation elevate the brand experience
-                              beautifully.
-                            </p>
                             <p>
                               Curved racks guide customers smoothly through the
                               space, enhancing the seamless experience. Backlit
@@ -1055,7 +1066,7 @@
                               create a memorable, emotional journey.
                             </p>
                           </div>
-                        </li>
+                        </li> -->
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
@@ -1076,6 +1087,13 @@
                               visibility and a standout brand identity. It makes
                               a striking statement amid surrounding
                               distractions.
+                            </p>
+                            <p>
+                              Curved racks guide customers smoothly through the
+                              space, enhancing the seamless experience. Backlit
+                              onyx marble adds rich texture and warmth to the
+                              atmosphere. Light, texture, and form combine to
+                              create a memorable, emotional journey.
                             </p>
                           </div>
                         </li>
