--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted="" autoplay="" loop="">
                             <source
-                              src="/projects/amyra/sections.mp4"
+                              src="/projects/amyra/sections-new.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -1070,7 +1070,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/ladia/Ladia Site Evalution.mp4"
+                              src="/projects/ladia/Ladia Site Evalution new.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -1176,7 +1176,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/ladia/Ladia Website Full Video.mp4"
+                              src="/projects/ladia/Ladia Website Full Video new.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -1250,16 +1250,17 @@
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
                               <p>Rakesh CH</p>
+                              <h5 class="subHead2">Procurment Manager</h5>
+                              <p>Abhilash.V</p>
 
                               <h5 class="subHead2">Project Team</h5>
                               <p>Ravi Kumar K</p>
-                              <p>Abdul</p>
-                              <p>Pavan P NSK</p>
+
                               <p>Ar. Chennakeshava.R</p>
                               <p>Ar. Vaishnavi Basireddy</p>
                               <p>Krishna Kanth P</p>
                               <p>Rajib roy</p>
-                              <p>Keshav G</p>
+
                               <p>Shamsheer p</p>
                               <p>Chandan Halder</p>
                               <p>Somisetty Baby Sushma</p>
@@ -1267,15 +1268,16 @@
 
                             <div>
                               <h5>Project Incharge</h5>
-                              <p>Sai</p>
+                              <p>Ameer khan</p>
                               <h5 class="subHead2">Operational manager</h5>
                               <p>Fathima</p>
-                              <h5 class="subHead2">Site supervisor</h5>
-                              <p>Ameer khan</p>
+
                               <h5 class="subHead2">Photograghy</h5>
                               <p>Victor</p>
                               <h5 class="subHead2">Content</h5>
                               <p>Ananth</p>
+                              <h5 class="subHead2">Relationship Manager</h5>
+                              <p>Tharani M</p>
                             </div>
                           </div>
                         </li>
